fix: 로그아웃 인증 스킵 버그 수정 및 인증 응답 형식 통일
- /api/auth/logout 이 /api/auth/ 스킵 프리픽스에 먹혀 토큰 검증이 통째로 건너뛰던 문제 수정.
  PublicPaths 에 AUTH_REQUIRED_EXCEPTIONS 도입 → TokenAuthenticationFilter 는 예외 경로에서
  토큰을 검증하고, WebSecurityConfig 는 permitAll 보다 먼저 authenticated 로 등록해
  토큰 없이 호출 시 NPE 대신 401 반환 (@AuthenticationPrincipal null 방지)
- AuthController: refresh/exchange 응답을 나머지(login/logout)와 동일하게 ApiResponse 로 감싸
  /api/auth/* 응답 포맷을 { success, data, error } 로 통일
- content: TMDB 매핑의 List.get(0) → getFirst() 정리 (Java 21 SequencedCollection)